--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "mongoose": "^8.0.4",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
